[tool.poetry]
name = "external_datasource"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8" 
black = "^20.8b1"
SQLAlchemy = "^1.4.11"
psycopg2 = "^2.8.6"
kubernetes = "^11.0.0"
python-dotenv = "^0.17.0"
Cython = "^0.29.23"
ipython = "^7.22.0"
kfp = "^1.4.0"
pandas = "^1.2.4"
numpy = "^1.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
